--- a/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/toric-code.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/toric-code.ipynb
@@ -11,7 +11,7 @@
     "# Toric code\n",
     "\n",
     "Next we'll discuss a specific CSS code known as the *toric code*, which was discovered by Alexei Kitaev in 1997.\n",
-    "In fact, the toric code isn't a single code, but rather it's a family of codes, one for each positive integer at least 2.\n",
+    "In fact, the toric code isn't a single code, but rather it's a family of codes, one for each positive integer starting from 2.\n",
     "These codes possess a few key properties:\n",
     "\n",
     "- The stabilizer generators have *low weight*, and in particular they all have weight 4. In coding theory parlance, the toric code is an example of a quantum low-density parity check code, or *quantum LDPC code* (where *low* means 4 in this case). This is nice because each stabilizer generator measurement doesn't need to involve too many qubits.\n",
