utility scale draft

--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -12,3 +12,4 @@ If you don't see your course in the following list, edit `learning/index.mdx` an
 - [Quantum machine learning](/learning/courses/quantum-machine-learning)
 - [Quantum computing in practice](/learning/courses/quantum-computing-in-practice)
 - [Quantum business foundations](/learning/courses/quantum-business-foundations)
+- [Utility scale quantum computing](/learning/courses/utility-scale-quantum-computing)
