--- a/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
@@ -12,7 +12,7 @@
     "  title=\"Multiple Systems | Understanding Quantum Information & Computation | Lesson 02\"\n",
     "  alt=\"Video thumbnail\"\n",
     "  href=\"https://youtu.be/DfZZS8Spe7U\"\n",
-    "  src=\"/learning/images/courses/basics-of-quantum-information/multiple-systems/introduction/youtube-thumbnail.avif\"\n",
+    "  src=\"/learning/images/courses/basics-of-quantum-information/multiple-systems/introduction/02-A.avif\"\n",
     "/>\n",
     "\n",
     "\n",
@@ -32,7 +32,6 @@
  ],
  "metadata": {
   "description": "A free IBM course on quantum information and computation",
-  "title": "Introduction",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -49,7 +48,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Introduction"
  },
  "nbformat": 4,
  "nbformat_minor": 5
