can set account preferences

--- a/docs/guides/serverless-port-code.ipynb
+++ b/docs/guides/serverless-port-code.ipynb
@@ -143,7 +143,7 @@
     "qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]\n",
     "optimization_level = 3\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
     "backend = service.get_backend(backend_name)\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
