--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -66,7 +66,9 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
   service = QiskitRuntimeService.save_account(
     token=token, # Your token is confidential.
     # Do not share your key in public code.
-    instance="<IBM Cloud CRN or instance name>", # Optionally specify the CRN to use.
+    instance="<IBM Cloud CRN or instance name>", # Optionally specify the instance to use.
+    plans_preference="['plan-type1', 'plan-type2']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
+    region="<region>", # Optionally set the region to prioritize.
     name="<account-name>", # Optionally name this set of account credentials.
     set_as_default=True, # Optionally set these as your default credentials.
   )
