--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "<ImageLink\n",
     "  title=\"Entanglement in Action |Understanding Quantum Information & Computation | Lesson 04\"\n",
