--- a/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "\n",
+    "Click on the following image to access the lesson video.\n",
     "<ImageLink\n",
     "  title=\"Quantum Circuits | Understanding Quantum Information & Computation | Lesson 03\"\n",
     "  alt=\"Video thumbnail\"\n",
