replace with thumbnails, add text

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction.ipynb
@@ -29,12 +29,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Quantum Algorithmic Foundations | Understanding Quantum Information & Computation | Lesson 06\"\n",
     "    alt=\"Video thumbnail\"\n",
     "    href=\"https://youtu.be/2wxxvwRGANQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction/youtube-thumbnail.avif\"\n",
+    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction/06-A.avif\"\n",
     "  />"
    ]
   }
