--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -23,12 +23,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Quantum Query Algorithms | Understanding Quantum Information & Computation | Lesson 05\"\n",
     "    alt=\"Video thumbnail\"\n",
     "    href=\"https://youtu.be/2wticzHE1vs?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction/youtube-thumbnail.avif\"\n",
+    "    src=\"/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction/05-A.avif\"\n",
     "  />"
    ]
   }
