index links for all JW's courses

--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Purifications and Fidelity | Understanding Quantum Information & Computation | Lesson 12\"\n",
