--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Quantum Channels | Understanding Quantum Information & Computation | Lesson 10\"\n",
