--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -8,9 +8,9 @@ description: Learn about quantum states, projective measurements, and unitary op
 Welcome to *Basics of Quantum Information,* the first course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - Basics of quantum information
-- Fundamentals of quantum algorithms
-- General formulation of quantum information
-- Foundations of quantum error correction
+- [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index)
+- [General formulation of quantum information](/learning/courses/general-formulation-of-quantum-information/index)
+- [Foundations of quantum error correction](/learning/courses/foundations-of-quantum-error-correction/index)
 
 This course begins with an introduction to the mathematics of quantum information, including a description of quantum information for both single and multiple systems. It then moves on to quantum circuits, which provide a standard way to describe quantum computations. Finally, three fundamentally important examples connected with the phenomenon of quantum entanglement are explained: quantum teleportation, superdense coding, and the CHSH game (also known as the CHSH inequality).
 
