--- a/learning/courses/foundations-of-quantum-error-correction/index.mdx
+++ b/learning/courses/foundations-of-quantum-error-correction/index.mdx
@@ -7,10 +7,10 @@ description: Learn about quantum error correction, quantum error correcting code
 
 Welcome to *Foundations of Quantum Error Correction,* the fourth course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
-- Basics of quantum information
-- Fundamentals of quantum algorithms
-- General formulation of quantum information
-- Foundations of quantum error correction
+- [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
+- [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index)
+- [General formulation of quantum information](/learning/courses/general-formulation-of-quantum-information/index)
+- [Foundations of quantum error correction](/learning/courses/foundations-of-quantum-error-correction/index)
 
 This course is on quantum error correction, with a focus on foundational concepts. 
 It begins with an explanation of what quantum error correcting codes are and how they work. 
