replace with thumbnails

--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
@@ -30,11 +30,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
+    "\n",
     "<ImageLink\n",
     "  title=\"Fault Tolerant Quantum Computation | Understanding Quantum Information & Computation | Lesson 16\"\n",
     "  alt=\"Video thumbnail\"\n",
     "  href=\"https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction/youtube-thumbnail.avif\"\n",
+    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction/16-A.avif\"\n",
     "/>"
    ]
   }
