runtime service syntax update?

--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "id": "261acf3b-2a20-4b93-97fd-c2551ab57b46",
    "metadata": {},
    "outputs": [
@@ -275,8 +275,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5554/1711706638.py:10: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. For information on migrating to the new IBM Quantum Platform, review the migration guide https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp .\n",
-      "  service = QiskitRuntimeService(channel=\"ibm_quantum\", instance=\"ibm-q/open/main\")\n"
+      "/tmp/ipykernel_5554/1569628430.py:10: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. For information on migrating to the new IBM Quantum Platform, review the migration guide https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp .\n",
+      "  service = QiskitRuntimeService()\n"
      ]
     }
    ],
@@ -287,15 +287,15 @@
     "\n",
     "# Syntax for first saving your token\n",
     "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "# service = QiskitRuntimeService(channel='ibm_quantum')\n",
-    "\n",
     "# Syntax for specifying a channel and instance (if your organization has one for you.\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\", instance=\"ibm-q/open/main\")"
+    "# service = QiskitRuntimeService(channel='ibm_quantum', instance=\"ibm-q/open/main\")\n",
+    "\n",
+    "service = QiskitRuntimeService()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "id": "0ef85527-b8ad-43e8-8829-97ddfbe099a9",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_brisbane\n"
+      "ibm_strasbourg\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
     "# Load the Runtime primitive and session\n",
     "from qiskit_ibm_runtime import Session, SamplerV2 as Sampler\n",
     "\n",
-    "# Use the least busy backend\n",
+    "# Use the least busy backend, specify options as needed\n",
     "# backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
     "backend = service.least_busy()\n",
     "print(backend.name)"
