--- a/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
+    "<ImageLink\n",
+    "  title=\"Multiple Systems | Understanding Quantum Information & Computation | Lesson 02\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/DfZZS8Spe7U\"\n",
+    "  src=\"/learning/images/courses/basics-of-quantum-information/multiple-systems/introduction/02-A.avif\"\n",
+    "/>\n",
+    "\n",
+    "\n",
     "This lesson focuses on the basics of quantum information in the context of *multiple* systems.\n",
     "This context arises both commonly and naturally in information processing, classical and quantum;\n",
     "information-carrying systems are typically constructed from collections of smaller systems, such as bits or qubits.\n",
@@ -23,7 +32,6 @@
  ],
  "metadata": {
   "description": "A free IBM course on quantum information and computation",
-  "title": "Introduction",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -40,7 +48,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Introduction"
  },
  "nbformat": 4,
  "nbformat_minor": 5
