--- a/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
+    "<ImageLink\n",
+    "  title=\"Quantum Circuits | Understanding Quantum Information & Computation | Lesson 03\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/30U2DTfIrOU\"\n",
+    "  src=\"/learning/images/courses/basics-of-quantum-information/quantum-circuits/introduction/03-A.avif\"\n",
+    "/>\n",
+    "\n",
+    "\n",
     "This lesson introduces the *quantum circuit* model of computation, which provides a standard way to describe quantum computations.\n",
     "\n",
     "The lesson also introduces a few important mathematical concepts, including *inner products* between vectors, the notions of *orthogonality* and *orthonormality*, and *projections* and *projective measurements*, which generalize standard basis measurements.\n",
