--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -303,7 +303,7 @@
     "\n",
     "In addition to sampling the statistics of the quantum coin, we can also use another Qiskit primitive called `Estimator` to measure the so-called *expectation value* of an *observable* of the state. To illustrate what this expectation value is, let's use the classical coin as an example. Say you're using the coin to gamble: every time you flip the coin and it lands \"heads up,\" you win one dollar. But every time it lands \"heads down,\" you lose one dollar. If you want to know how much money you're expected to get each flip (the expectation value of the observable \"money\"), then you would calculate:\n",
     "\n",
-    "$E(money) = \\frac{1}{2} (+ \\$1) +  \\frac{1}{2} (- \\$1) = \\$0 $\n",
+    "$E(money) = \\frac{1}{2} (+ \\text{1 dollar}) +  \\frac{1}{2} (- \\text{1 dollar}) = \\text{0 dollars} $\n",
     "\n",
     "Since you're equally likely to win a dollar as you are to lose a dollar, the expectation value is $0.\n",
     "\n",
@@ -587,12 +587,13 @@
     "This is, again, an equal superposition of 0 and 1, akin to flipping a coin, but this state's coefficient in front of $|1\\rangle$ has a phase of $\\phi = \\pi$ to give it the negative sign.\n",
     "\n",
     "### Check-in question:\n",
-    "<details>\n",
-    "<summary> Calculate the resulting state after applying the second Hadamard. That is, calculate: $H(\\frac{1}{\\sqrt{2}} |0\\rangle + \\frac{1}{\\sqrt{2}} |1\\rangle)$. Note that $H$ is distributive, so we can apply it to each of the terms individually.\n",
+    "Calculate the resulting state after applying the second Hadamard. That is, calculate: $H(\\frac{1}{\\sqrt{2}} |0\\rangle + \\frac{1}{\\sqrt{2}} |1\\rangle)$. Note that $H$ is distributive, so we can apply it to each of the terms individually.\n",
     "\n",
-    "</summary>\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary> Answer:</summary>\n",
+    "\n",
     "$H(\\frac{1}{\\sqrt{2}} |0\\rangle + \\frac{1}{\\sqrt{2}} |1\\rangle) = \\frac{1}{\\sqrt{2}} H|0\\rangle + \\frac{1}{\\sqrt{2}} H|1\\rangle = \\frac{1}{2} [(|0\\rangle + |1\\rangle) + (|0\\rangle - |1\\rangle)] = |0\\rangle $\n",
+    "\n",
     "</details>"
    ]
   },
@@ -913,161 +914,6 @@
     "# Step 4: Return the result in classical form, and analyze.\n",
     "\n",
     "print(res[0].data.evs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f14bd04e-255c-4bdd-a1fa-34c71273a369",
-   "metadata": {},
-   "source": [
-    "The expectation values are 0, -1, and 0 for X, Y and Z, respectively.\n",
-    "\n",
-    "#### Check-in question:\n",
-    "<details>\n",
-    "<summary> Given the expectation values, what are the probabilities of measuring the quantum coin to be heads up/down (or left/right or forward/back) for each of the 3 measurement axes?\n",
-    "\n",
-    "</summary>\n",
-    "Answer:\n",
-    "There is a 50/50 probability of measuring either state along X and Z, and the state is always measured in the -y direction along Y.\n",
-    "</details>\n",
-    "\n",
-    "$~$\n",
-    "\n",
-    "\n",
-    "This is the same result we got with our thought experiment applying a \"$\\sqrt{\\text{NOT}}$\" 90-degree rotation on the classical coin. In fact, there is a precise analogy between the coin and the qubit state now. We can visualize the qubit state as a vector pointing in the direction of heads on a coin, normal to the surface of the coin. So, heads up, or the $|0\\rangle$ state on a quantum coin, is equivalent to a vector pointing straight up; heads down, or $|1\\rangle$, is pointing straight down. Any equal superposition of $|0\\rangle$ and $|1\\rangle$ points horizontally. The phase of the state determines the exact horizontal direction - the direction it points along the equator is equal to the direction the coefficient $c_2$ points in the complex plane.\n",
-    "\n",
-    "Now, *every* gate that we've seen in this notebook can be visualized as a rotation (or series of rotations) of the coin/vector.\n",
-    "\n",
-    "\n",
-    " - NOT: 180 degrees around the x-axis\n",
-    "\n",
-    " - $\\sqrt{\\text{NOT}}$: 90 degrees around the x-axis\n",
-    "\n",
-    " - PHASE: rotation of $\\phi$ around z-axis\n",
-    "\n",
-    " - Hadamard: This one's a bit trickier. We initially likened it to flipping a coin, making the coin spin uncontrollably in the air. But the Hadamard is actually a controlled, deterministic rotation of the coin, like the other gates. The Hadamard is performed by rotating 90 degrees around the y-axis, then 180 degrees around the x-axis.\n",
-    "\n",
-    "So, there's nothing random about a quantum superposition state or any of the standard operations we perform on the qubit. Every operation is deterministic and reversible. The only time randomness comes into play is when we decide to *measure* the quantum state.\n",
-    "\n",
-    "\n",
-    "### The qubit state as a Bloch vector\n",
-    "\n",
-    "This vector that points in the direction of the coin's \"head\" is known as a \"Bloch vector.\" Formally, an arbitrary (isolated) qubit state can be represented by a vector that lies on the surface of a sphere of radius 1 with coordinates $(r, \\theta, \\phi)$. Written in terms of these coordinates, the qubit state is:\n",
-    "\n",
-    "$|\\psi\\rangle = \\cos{\\frac{\\theta}{2}} |0\\rangle + e^{i \\phi} \\sin{\\frac{\\theta}{2}} |1\\rangle$\n",
-    "\n",
-    "![A diagram of the Bloch sphere. The quantum state is a vector in three dimensions. Since it can point in any direction, the quantum state can be specified using polar angles theta and phi to locate a point on a spherical surphace.](/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/bloch-sphere.avif)\n",
-    "\n",
-    "#### Check-in question:\n",
-    "Recall the two outcomes of applying the Hadamard gate to 0 and 1. Using your knowledge of how the Hadamard rotates the Bloch vector, verify these two outcomes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9e7efad-9561-4613-b2e2-d5201d3cef72",
-   "metadata": {},
-   "source": [
-    "Now let's check with Qiskit about how the Bloch vector changes when we apply various gates to our qubit starting from the $|0\\rangle$ state.\n",
-    "\n",
-    "#### NOT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "d33d6191-c455-4cac-8947-0d68030278e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/d33d6191-c455-4cac-8947-0d68030278e9-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from qiskit.visualization import plot_bloch_multivector\n",
-    "\n",
-    "qnot = QuantumCircuit(1)\n",
-    "qnot.x(0)\n",
-    "\n",
-    "plot_bloch_multivector(qnot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "69f06a6c-1a33-48a7-84de-30c49fc11f97",
-   "metadata": {},
-   "source": [
-    "#### $\\sqrt{\\text{NOT}}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "8648c4b8-edd1-4e40-9c74-50219c84c928",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/8648c4b8-edd1-4e40-9c74-50219c84c928-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qsqrtnot = QuantumCircuit(1)\n",
-    "qsqrtnot.sx(0)\n",
-    "\n",
-    "plot_bloch_multivector(qsqrtnot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0145781-8534-4f94-bea4-11111dfffdfb",
-   "metadata": {},
-   "source": [
-    "#### PHASE ($\\phi = \\pi$)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f2b33aa1-2460-4e66-aa48-cbceef02729e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/extracted-outputs/f2b33aa1-2460-4e66-aa48-cbceef02729e-0.avif\" alt=\"Output of the previous code cell\" />"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qphase = QuantumCircuit(1)\n",
-    "qphase.p(np.pi, 0)\n",
-    "\n",
-    "plot_bloch_multivector(qphase)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ca1c439-055e-4c11-a730-2dfa1f6141e4",
-   "metadata": {},
-   "source": [
-    "#### Hadamard"
    ]
   },
   {
