fixed figure removal

--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -879,9 +879,7 @@
    "source": [
     "This is the well-known spin-z operator found in all quantum mechanics textbooks. One often sees this with the $\\hbar/2$ removed, in which case it is the \"Pauli-z\" operator, typically denoted $\\sigma_z$:\n",
     "\n",
-    "$$\n",
-    "\\sigma_z = \\begin{pmatrix} 1 & 0 \\\\ 0 & -1\\end{pmatrix}.\n",
-    "$$\n",
+    "$$\\sigma_z = \\begin{pmatrix} 1 & 0 \\\\ 0 & -1\\end{pmatrix}. $$\n",
     "\n",
     "This is useful, since this Pauli operator (and related matrices) can describe many physical systems involving two levels or two possible outcomes of measurement, including states of transmon qubits in a quantum computer.\n",
     "\n",
@@ -891,9 +889,7 @@
     "\n",
     "Suppose you start with a particle in a spin state\n",
     "\n",
-    "$$\n",
-    "|\\psi\\rangle = \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}.\n",
-    "$$\n",
+    "$$|\\psi\\rangle = \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}.$$\n",
     "\n",
     "(a) What do you get if you act with the $S_z$ operator on this state vector? (b) What do you obtain if you make a single measurement of the $z$ component of spin of this particle? (c) What do you get if you prepare many particles identical to this state and make thousands of measurements of the $z$ component of the spin?\n",
     "<details>\n",
@@ -901,22 +897,14 @@
     "\n",
     "(a) You get\n",
     "\n",
-    "$$\n",
-    "S_z |\\psi\\rangle = \\frac{\\hbar}{2} \\begin{pmatrix} 1 & 0 \\\\ 0 & -1\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}\n",
-    "$$\n",
-    "$$\n",
-    "= \\frac{\\hbar}{2} \\begin{pmatrix}\\sqrt{3/5} \\\\ -\\sqrt{2/5}\\end{pmatrix}.\n",
-    "$$\n",
+    "$$S_z |\\psi\\rangle = \\frac{\\hbar}{2} \\begin{pmatrix} 1 & 0 \\\\ 0 & -1\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}$$\n",
+    "$$= \\frac{\\hbar}{2} \\begin{pmatrix}\\sqrt{3/5} \\\\ -\\sqrt{2/5}\\end{pmatrix}.$$\n",
     "\n",
     "That's it. There is no experimental outcome. You just apply the matrix to the vector and you got a slightly different vector which now has a new \"-\" sign, and no longer has a magnitude of 1, since it has a prefactor $\\hbar/2$.\n",
     "\n",
     "(b) You will either obtain $|\\uparrow\\rangle$ or $|\\downarrow\\rangle$. This corresponds to observing a projection of spin on the $z$ axis of either $\\hbar/2$ or $-\\hbar/2$, respectively. We can also determine the probability of each outcome, since\n",
-    "$$\n",
-    "P_{\\uparrow\\psi}=|\\langle \\uparrow|\\psi\\rangle|^2 = \\vert \\begin{pmatrix}1 & 0\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}\\vert^2 = |\\sqrt{3/5}|^2 = \\frac{3}{5}\n",
-    "$$\n",
-    "$$\n",
-    "P_{\\downarrow\\psi}=|\\langle \\downarrow|\\psi\\rangle|^2 = \\vert \\begin{pmatrix}0 & 1\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}\\vert^2 = |\\sqrt{2/5}|^2 = \\frac{2}{5}\n",
-    "$$\n",
+    "$$P_{\\uparrow\\psi}=|\\langle \\uparrow|\\psi\\rangle|^2 = \\vert \\begin{pmatrix}1 & 0\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}\\vert^2 = |\\sqrt{3/5}|^2 = \\frac{3}{5}$$\n",
+    "$$P_{\\downarrow\\psi}=|\\langle \\downarrow|\\psi\\rangle|^2 = \\vert \\begin{pmatrix}0 & 1\\end{pmatrix} \\begin{pmatrix}\\sqrt{3/5} \\\\ \\sqrt{2/5}\\end{pmatrix}\\vert^2 = |\\sqrt{2/5}|^2 = \\frac{2}{5}$$\n",
     "So while the spin-up state is 20% more likely, either outcome is possible, and we will only obtain one of these two states.\n",
     "\n",
     "(c) Roughly 60% of the measurements will yield spin-up particles, and roughly 40% of the measurements will yield spin-down particles, according to the measurement probabilities calculated in part (b).\n",
@@ -927,9 +915,7 @@
     "\n",
     "Verify the answers to parts (b) and (c) of the previous question by using the analogy between spin-up states of an atom and qubit states:\n",
     "\n",
-    "$$\n",
-    "|\\uparrow\\rangle\\sim|0\\rangle.\n",
-    "$$\n",
+    "$$|\\uparrow\\rangle\\sim|0\\rangle.$$\n",
     "\n",
     "Code quantum circuits to create the desired initial state, and then use either real hardware or a simulator to check the outcomes of a single measurement, and from an ensemble of hundreds or even thousands of measurements.\n",
     "\n",
@@ -970,6 +956,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c871b05-f0bc-423a-b200-ef99bf278eb5",
    "metadata": {},
    "source": [
     "## Fifth experiment: Measuring different observables\n",
@@ -1006,9 +993,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "a582ba58-1621-4828-8ebb-3a8d63199e9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit/extracted-outputs/a582ba58-1621-4828-8ebb-3a8d63199e9e-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define registers\n",
     "qr = QuantumRegister(1, \"q\")\n",
@@ -1024,6 +1023,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95ee1e18-3c4c-468a-a21e-fd19e034192b",
    "metadata": {},
    "source": [
     "This circuit rotates our system so that measurements (along $z$) tell us about the $x$ characteristics prior to the rotation. We already know that the quantum computer initializes states to $|0\\rangle$ which corresponds to $|\\uparrow\\rangle$. Let's see what happens when we measure the projection of spin along $x$ for a state initially in $|\\uparrow\\rangle$."
@@ -1031,9 +1031,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "id": "f36273f4-7a2c-4abe-8252-287abcb5634d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': 5026, '0': 4974}\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit.primitives import StatevectorSampler as Sampler\n",
     "\n",
@@ -1045,6 +1054,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8943360c-dcb8-4b1c-bc39-00ddc77dd5e5",
    "metadata": {},
    "source": [
     "This shows us that for a qubit initially in $|0\\rangle$ (or equivalently, a spin in the $|\\uparrow\\rangle$) the probability of measuring a projection along $+x$ or $-x$ is about 50-50. In some ways, this makes perfect sense. After all, if something were pointing along the z direction, it would have no particular preference for $\\pm x$. We might expect the same to be true, if we start with the state $|1\\rangle$ (or $|\\downarrow\\rangle$). Let's check:"
@@ -1052,9 +1062,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "id": "a3ce36c2-5680-4548-a923-3ef5b2fcf942",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit/extracted-outputs/a3ce36c2-5680-4548-a923-3ef5b2fcf942-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define registers\n",
     "qr = QuantumRegister(1, \"q\")\n",
@@ -1071,9 +1093,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "id": "574a6752-9294-4655-abaf-b0c6ce9368fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': 5001, '0': 4999}\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit.primitives import StatevectorSampler as Sampler\n",
     "\n",
@@ -1085,6 +1116,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65c46b91-b4cc-43c3-a4dd-f86c2a1effc4",
    "metadata": {},
    "source": [
     "Yes! Again, we find a 50-50 probability of measuring a projections along $\\pm x$. In analogy with measurements along $z$, we might further suspect that a particle that collapses into a state definitely along $+x$ might have zero probability of subsequently being measured along $-x$. Let's check:"
@@ -1092,9 +1124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "id": "d73e638d-1fcc-48af-ae03-61f1e60da6d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit/extracted-outputs/d73e638d-1fcc-48af-ae03-61f1e60da6d0-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from qiskit import QuantumCircuit\n",
     "\n",
@@ -1114,9 +1158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "id": "18cb2742-38f8-4370-84dc-86aa033a7ad2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'11': 515, '00': 509}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit/extracted-outputs/18cb2742-38f8-4370-84dc-86aa033a7ad2-1.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "job = sampler.run([qc])\n",
     "print(job.result()[0].data.c.get_counts())\n",
@@ -1125,6 +1188,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea6b75aa-d382-4eed-8739-a4990ad02439",
    "metadata": {},
    "source": [
     "As expected, we obtain results in which the projection is along $+x$, and then later is again along $+x$, and we have results in which the projection is initially along $-x$ and is later along $-x$ once again. We do not see cases where the projection switches from $+x$ to $-x$ or vice-versa. We can collect our observations and use them to develop further operators in matrix forms, and further state vectors.\n",
@@ -1143,12 +1207,12 @@
     "|+y\\rangle &= \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ i\\end{pmatrix} & \\:  & |-y\\rangle &=& \\frac{1}{\\sqrt{2}}\\begin{pmatrix}1 \\\\ -i\\end{pmatrix} & \\: &S_y &=& \\frac{\\hbar}{2} \\begin{pmatrix} 0 & -i \\\\ i & 0\\end{pmatrix}\\\\\n",
     "|+z\\rangle &= \\begin{pmatrix}1 \\\\ 0\\end{pmatrix} & \\:  &|-z\\rangle &=& \\begin{pmatrix}0 \\\\ 1\\end{pmatrix} & \\: &S_z &=& \\frac{\\hbar}{2} \\begin{pmatrix} 1 & 0 \\\\ 0 & 1\\end{pmatrix}\\\\\n",
     "\\end{aligned}\n",
-    "\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "41d64357-c85d-4328-9e73-3d353c6b2602",
    "metadata": {},
    "source": [
     "## Questions\n",
@@ -1226,6 +1290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d1073541-90dd-49f3-b000-2b3eda9d3ddc",
    "metadata": {},
    "source": [
     "## Acknowledgements\n",
