Add hyperlinked thumbnail images to courses (#3290)

--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
@@ -24,12 +24,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Purifications and Fidelity | Understanding Quantum Information & Computation | Lesson 12\"\n",
     "    alt=\"Video thumbnail\"\n",
     "    href=\"https://youtu.be/jemWEdnJTnI?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction/youtube-thumbnail.avif\"\n",
+    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction/12-A.avif\"\n",
     "  />"
    ]
   }
