--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
@@ -37,12 +37,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Density Matrices | Understanding Quantum Information & Computation | Lesson 09\"\n",
     "    alt=\"Video thumbnail\"\n",
     "    href=\"https://youtu.be/CeK9ry8G8HQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/density-matrices/introduction/youtube-thumbnail.avif\"\n",
+    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/density-matrices/introduction/09-A.avif\"\n",
     "  />"
    ]
   }
