--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/introduction.ipynb
@@ -28,12 +28,13 @@
     "\n",
     "## Lesson video\n",
     "\n",
+    "Click on the following image to access the lesson video.\n",
     "\n",
     "  <ImageLink\n",
     "    title=\"Quantum Channels | Understanding Quantum Information & Computation | Lesson 10\"\n",
     "    alt=\"Video thumbnail\"\n",
     "    href=\"https://youtu.be/cMl-xIDSmXI?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
-    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/quantum-channels/introduction/youtube-thumbnail.avif\"\n",
+    "    src=\"/learning/images/courses/general-formulation-of-quantum-information/quantum-channels/introduction/10-A.avif\"\n",
     "  />"
    ]
   }
